package com.wali.live.proto;

option java_package = "com.wali.live.proto.Banner";
option java_outer_classname = "BannerProto";

message SyncBannerReq
{
required uint64 uuid = 1;   //直播用户id
required uint64 lastUpdateTs = 2;   //上一次拉取的最大banner修改时间,首次传0就OK
}
message SyncBannerRsp
{
required uint32 retCode = 1;    //0:表示成功
repeated Banner banner= 2;     //广告位列表
optional uint64 lastUpdateTs = 3;   //上一次拉取的最大banner修改时间
}
message Banner
{
required string picUrl = 1;//图片地址
required string skipUrl = 2;//图片跳转地址
required uint64 lastUpdateTs = 3;//修改时间
optional bool isPublic = 4; //是否公开的。默认false即为内部用户可见 (客户端不用关注该字段)
optional uint32 platform = 5; //平台 1 android, 2 IOS, 默认0 所有平台 (客户端不用关注该字段)
optional uint32 startTime = 6; //开始时间 (客户端不用关注该字段)
optional uint32 endTime = 7; //结束时间 (客户端不用关注该字段)
optional uint32 id = 8; //banner id, 客户端做打点统计
optional string shareIconUrl = 9;//分享时用的图片URL
optional string shareTitle = 10;//分享时用的标题
optional string shareDesc = 11;//分享时用的摘要
optional uint32 channelId = 12  [default = 1];//频道id，默认值为1为热门
}
